Criado a página3 e uma relação com a página 2

--- a/pagina2.html
+++ b/pagina2.html
@@ -20,7 +20,8 @@
         </audio>
     </div>
     <div>
-        <video src="media/sample-5s.mp4"controls>
+        <video src=
+        "media/sample-5s.mp4"controls>
             
         </video>
     </div>
@@ -42,9 +43,11 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         referrerpolicy="strict-origin-when-cross-origin" 
         allowfullscreen></iframe>
+        <iframe width="580" height="440" src="https://www.bb.com.br/site/" frameborder="0">
+        </iframe> 
     </p>
     <p>
-        <iframe src="https://www.bb.com.br/site/" frameborder="0"></iframe>
+        <a href="pagina3.html">Página 3</a>
     </p>
-</body>
+
 </html>
