Alterações na página3, dia 13/08/2025 - FINAL

--- a/pagina3.html
+++ b/pagina3.html
@@ -20,6 +20,7 @@
            <br> <input type="c" name="Endereço" id="Endereço:" placeholder="Digite seu Endereço:" size="60">
            <br> <input type="text" name="campo1" id="campo1" readonly value="Informação">
            <br> <input type="text" name="campo2" id="campo2" readonly value="Info2" disabled>
+           <br> <label for="">Número : </label> <input type="number" name="numero" id="numero" min="18" max="100">
 
             <br><input type="submit" value="Enviar">    
             <input type="reset" value="Limpar">
